testsuite/tests/properties/invalid_no/bad_type.lkt
import common

class BarNode: FooNode {
    @export fun prop(): Int = null[Int]
}
